--- a/app/src/main/res/layout/activity_add_movie.xml
+++ b/app/src/main/res/layout/activity_add_movie.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:soundEffectsEnabled="true"
         app:layout_constraintStart_toEndOf="@+id/category_spinner2"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:soundEffectsEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:soundEffectsEnabled="true"
         app:layout_constraintStart_toEndOf="@+id/category_spinner"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -61,20 +61,23 @@
 
     <EditText
         android:id="@+id/movie_name_text"
-        android:layout_width="320dp"
+        android:layout_width="490dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView" />
 
     <Button
         android:id="@+id/add_movie_button"
-        android:layout_width="279dp"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
         android:layout_marginEnd="24dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="12dp"
         android:onClick="addMovie"
         android:text="@string/add_movie"
         android:textSize="18sp"
@@ -118,7 +121,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="42dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/month_spinner"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -127,23 +130,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/cancel_button"
-        android:layout_width="265dp"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
         android:layout_marginBottom="24dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
         android:onClick="cancel"
         android:text="@android:string/cancel"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/description_text" />
+        app:layout_constraintEnd_toStartOf="@+id/add_movie_button"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
@@ -160,7 +163,7 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:text="@string/movie_score"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
@@ -170,7 +173,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:text="@string/movie_description"
         android:textSize="18sp"
@@ -180,14 +183,15 @@
     <EditText
         android:id="@+id/description_text"
         android:layout_width="550dp"
-        android:layout_height="322dp"
+        android:layout_height="350dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="@string/movie_description_hint"
         android:inputType="textPersonName"
         android:textAlignment="center"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -196,8 +200,8 @@
         android:id="@+id/score_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toEndOf="@+id/release_year_text"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -210,6 +214,7 @@
         android:ems="10"
         android:hint="@string/movie_release_hint"
         android:inputType="textPersonName"
+        android:textAlignment="center"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -223,6 +228,7 @@
         android:ems="10"
         android:hint="@string/movie_release_hint"
         android:inputType="textPersonName"
+        android:textAlignment="center"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/day_spinner"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
