--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -7,54 +7,70 @@
     android:layout_height="match_parent"
     tools:context="msms.comp3350.presentation.MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignWithParentIfMissing="false"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/MovieButton"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:onClick="buttonMoviesOnClick"
-            android:text="@string/title_movies" />
+    <Button
+        android:id="@+id/MovieButton"
+        android:layout_width="407dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:onClick="buttonMoviesOnClick"
+        android:text="@string/title_movies"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.483"
+        app:layout_constraintStart_toEndOf="@+id/movieImage"
+        app:layout_constraintTop_toBottomOf="@+id/appTitle" />
 
-        <Button
-            android:id="@+id/UsersButton"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:onClick="buttonUsersOnClick"
-            android:text="@string/title_users" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/UsersButton"
+        android:layout_width="407dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:onClick="buttonUsersOnClick"
+        android:text="@string/title_users"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/userImage"
+        app:layout_constraintTop_toBottomOf="@+id/MovieButton" />
+
 
     <TextView
         android:id="@+id/appTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="@string/app_name_full"
-        android:textSize="18sp" />
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/movieImage"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_below="@+id/appTitle"
-        android:layout_toStartOf="@+id/linearLayout"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="32dp"
         android:scaleType="fitXY"
-        android:src="@drawable/movie" />
+        android:src="@drawable/movie"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appTitle" />
 
     <ImageView
         android:id="@+id/userImage"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_below="@+id/appTitle"
-        android:layout_toEndOf="@+id/linearLayout"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="24dp"
         android:scaleType="fitXY"
-        android:src="@drawable/user" />
-</RelativeLayout>
+        android:src="@drawable/user"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/movieImage" />
+</android.support.constraint.ConstraintLayout>
