--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:text="@string/movie_category"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,8 +90,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
         android:text="@string/movie_license"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
@@ -110,7 +110,7 @@
         android:text="@android:string/cancel"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/update_button"
+        app:layout_constraintEnd_toStartOf="@+id/add_movie_button"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -149,7 +149,7 @@
         android:id="@+id/description_text"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
@@ -158,7 +158,7 @@
         android:hint="@string/movie_description_hint"
         android:inputType="textPersonName"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/update_button"
+        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -197,16 +197,16 @@
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
         app:layout_constraintEnd_toStartOf="@+id/delete_button"
-        app:layout_constraintStart_toEndOf="@+id/cancel_button" />
+        app:layout_constraintStart_toEndOf="@+id/add_movie_button" />
 
     <TextView
         android:id="@+id/exp_year_text"
         android:layout_width="107dp"
         android:layout_height="42dp"
-        android:gravity="center"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/movie_release_hint"
         android:textAlignment="center"
         android:textSize="14sp"
@@ -219,7 +219,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="@string/change_date"
-        android:textSize="12sp"
+        android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/exp_year_text"
         app:layout_constraintStart_toEndOf="@+id/exp_year_text" />
 
@@ -227,11 +227,13 @@
         android:id="@+id/add_movie_button"
         android:layout_width="0dp"
         android:layout_height="64dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="12dp"
         android:onClick="addMovie"
         android:text="@string/add"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/score_spinner" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
+        app:layout_constraintEnd_toStartOf="@+id/update_button"
+        app:layout_constraintStart_toEndOf="@+id/cancel_button" />
 
 </android.support.constraint.ConstraintLayout>
