--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -20,22 +20,12 @@
 
     <Spinner
         android:id="@+id/category_spinner"
-        android:layout_width="130dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:soundEffectsEnabled="true"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <Spinner
-        android:id="@+id/category_spinner2"
-        android:layout_width="130dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:soundEffectsEnabled="true"
-        app:layout_constraintStart_toEndOf="@+id/category_spinner"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
@@ -76,28 +66,15 @@
         app:layout_constraintStart_toEndOf="@+id/update_button" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:text="@string/movie_category2"
-        android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
-        app:layout_constraintStart_toEndOf="@+id/textView3" />
-
-    <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:text="@string/movie_license"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/movie_name_text"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/movie_name_text" />
 
     <Button
         android:id="@+id/cancel_button"
@@ -118,11 +95,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:text="@string/movie_release"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category_spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/movie_id_text" />
 
     <TextView
         android:id="@+id/textView7"
@@ -235,5 +212,28 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
         app:layout_constraintEnd_toStartOf="@+id/update_button"
         app:layout_constraintStart_toEndOf="@+id/cancel_button" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:text="@string/movie_id"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/textView3" />
+
+    <EditText
+        android:id="@+id/movie_id_text"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="304dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="@string/movie_id_hint"
+        android:inputType="textPersonName"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 </android.support.constraint.ConstraintLayout>
