--- a/app/src/main/res/layout/activity_user_display.xml
+++ b/app/src/main/res/layout/activity_user_display.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="msms.comp3350.presentation.UserDisplayActivity"
-    tools:layout_editor_absoluteY="89dp">
+    tools:layout_editor_absoluteY="25dp">
 
 
     <TextView
@@ -22,45 +22,45 @@
 
     <EditText
         android:id="@+id/name_text"
-        android:layout_width="230dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textSize="14sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/name_textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/password_textView"
-        app:layout_constraintTop_toBottomOf="@+id/userid_text" />
+        app:layout_constraintStart_toEndOf="@+id/name_textView" />
 
     <EditText
         android:id="@+id/password_text"
-        android:layout_width="230dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="text"
         android:textAlignment="center"
         android:textSize="14sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/password_textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/password_textView"
-        app:layout_constraintTop_toBottomOf="@+id/name_text" />
+        app:layout_constraintStart_toEndOf="@+id/password_textView" />
 
     <EditText
         android:id="@+id/age_text"
-        android:layout_width="230dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/password_textView"
-        app:layout_constraintTop_toBottomOf="@+id/password_text" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/age_textView"
+        app:layout_constraintEnd_toEndOf="@+id/subenddate_textView"
+        app:layout_constraintStart_toEndOf="@+id/age_textView" />
 
     <TextView
         android:id="@+id/password_textView"
@@ -108,7 +108,7 @@
 
     <Button
         android:id="@+id/delete_button"
-        android:layout_width="0dp"
+        android:layout_width="164dp"
         android:layout_height="64dp"
         android:layout_marginEnd="24dp"
         android:layout_marginStart="12dp"
@@ -121,7 +121,7 @@
 
     <Button
         android:id="@+id/cancel_button"
-        android:layout_width="0dp"
+        android:layout_width="164dp"
         android:layout_height="64dp"
         android:layout_marginBottom="24dp"
         android:layout_marginEnd="12dp"
@@ -134,7 +134,7 @@
 
     <Button
         android:id="@+id/update_button"
-        android:layout_width="0dp"
+        android:layout_width="176dp"
         android:layout_height="64dp"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
@@ -149,44 +149,44 @@
         android:id="@+id/userid_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:text="@string/user_userid"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/userid_text"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/userid_text"
-        android:layout_width="230dp"
+        android:layout_width="0dp"
         android:layout_height="42dp"
-        android:gravity="center"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:ems="10"
+        android:gravity="center"
         android:singleLine="false"
         android:textAlignment="center"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/password_textView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/userid_textView"
+        app:layout_constraintEnd_toEndOf="@+id/pickDate"
+        app:layout_constraintStart_toEndOf="@+id/userid_textView" />
 
     <Spinner
         android:id="@+id/gender_spinner"
-        android:layout_width="113dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        app:layout_constraintStart_toEndOf="@+id/password_textView"
-        app:layout_constraintTop_toTopOf="@+id/gender_textView" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toEndOf="@+id/gender_textView"
+        app:layout_constraintTop_toBottomOf="@+id/age_text" />
 
     <TextView
         android:id="@+id/subend_year_text"
-        android:layout_width="wrap_content"
+        android:layout_width="107dp"
         android:layout_height="42dp"
         android:layout_marginStart="24dp"
-        android:gravity="center"
+        android:layout_marginTop="8dp"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/movie_release_hint"
         android:textAlignment="center"
         android:textSize="14sp"
@@ -199,8 +199,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/change_date"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/subend_year_text"
-        app:layout_constraintTop_toBottomOf="@+id/subenddate_textView" />
+        android:textSize="14sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/subend_year_text"
+        app:layout_constraintStart_toEndOf="@+id/subend_year_text" />
 
 </android.support.constraint.ConstraintLayout>
