--- a/app/src/main/res/layout/activity_movie_display.xml
+++ b/app/src/main/res/layout/activity_movie_display.xml
@@ -102,7 +102,7 @@
         app:layout_constraintTop_toBottomOf="@+id/movie_id_text" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/score_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -252,7 +252,7 @@
         android:layout_marginStart="32dp"
         android:textSize="14sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/release_year_text"
-        app:layout_constraintEnd_toEndOf="@+id/textView7"
+        app:layout_constraintEnd_toEndOf="@+id/score_textview"
         app:layout_constraintStart_toEndOf="@+id/release_year_text" />
 
 </android.support.constraint.ConstraintLayout>
